# appversion

./: README.md  pyproject.toml
djangoappversion/: serializers.py  views.py
