[tool.poetry]
name = "djangoappversion"
version = "0.1.0"
description = ""
authors = ["Borodulin D.A."]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^1.11"
djangorestframework = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
