[tool.poetry]
name = "djangoappversion"
version = "0.1.1"
description = ""
authors = ["Borodulin D.A."]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.10"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
